# obsidian-notion-anki

./: .env.example  .gitignore  AGENTS.md  README.md  config.yaml  notion_to_anki.py  obsidian2notion.py  pyproject.toml  requirements.txt  setup_anki_note_types.py  word_to_notion.py
.agents/: settings.json
.agents/agents/: code-reviewer.md  python-reviewer.md  refactor-cleaner.md  security-reviewer.md  tdd-guide.md
.agents/skills/coding-standards/: SKILL.md
.agents/skills/e2e-testing/: SKILL.md
.agents/skills/handover/: SKILL.md
.agents/skills/security-review/: SKILL.md
.agents/skills/tdd-workflow/: SKILL.md
.agents/skills/vocab-extractor/: SKILL.md  SPEC.md
.agents/skills/vocab-extractor/prompts/: dedupe-against-vault.md
.agents/skills/vocab-extractor/prompts/de/: extract-and-lemmatize.md  fill-metadata.md
.claude/: skills
.cursor/skills/add-word/: SKILL.md
.cursor/skills/python-testing/: SKILL.md
docs/: workflow-design.md
src/: anki_client.py  card.css  config.py  models.py  note_builder.py  notion_sync.py  notion_writer.py  obsidian_parser.py  templates.py  word_file_parser.py  word_registrar.py
tests/: conftest.py
tests/integration/: test_obsidian2notion.py  test_word_to_notion.py
tests/unit/: test_anki_client.py  test_config.py  test_models.py  test_note_builder.py  test_notion_sync.py  test_notion_writer.py  test_obsidian_parser.py  test_word_file_parser.py  test_word_registrar.py
